--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -78,7 +78,7 @@ footer {
     width: 100%;
     text-align: center;
     padding: var(--pad10);
-    border-top: 5px solid var(--color3);
+    border-top: 5px solid var(--color2);
 }
 
 /** elements **/
@@ -127,7 +127,7 @@ hr {
 .navigation a:hover,
 .avigation a:active {
     color: var(--color1);
-    background-color:rgb(255, 255, 255);
+    background-color: var(--color3);
     transition: background-color 0.5s ease;
     transition-delay: 0s;
 }
