--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -118,11 +118,20 @@ a {
     text-align: center;
 }
 
+
 hr {
     margin: 1rem;
 }
 
 /** blocks **/
+
+.links {
+    font-size: 1rem;
+    color: black;
+    padding: 0;
+    border-radius: 0;
+    background-color:rgba(255, 255, 255, 0);
+}
 
 .hero {
     display: grid;
