--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -133,6 +133,11 @@ hr {
     background-color:rgba(255, 255, 255, 0);
 }
 
+.member img{
+    width: 45%;
+    height: auto;
+}
+
 .hero {
     display: grid;
     grid-template-columns: 1fr;
