--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -13,9 +13,9 @@
     --roboto: "Roboto", sans-serif;
     --open-sans: "Open Sans, sans-serif";
     /* mobile view */
-    --h1: 1.75rem;
-    --h2: 1.5rem;
-    --p: 1rem;
+    --h1: 1.5rem;
+    --h2: 1.25rem;
+    --p: 0.90rem;
     --b: 0.75rem;
     --pad5: 5px;
     --pad10: 10px;
@@ -77,7 +77,6 @@ footer {
     color: rgb(255, 255, 255);
     width: 100%;
     text-align: center;
-    padding: var(--pad10);
     border-top: 5px solid var(--color3);
 }
 
@@ -109,9 +108,8 @@ a {
     color: rgb(255, 255, 255);
     text-decoration: none;
     background-color: var(--color1);
-    padding: 5px;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 6px;
     font-family: var(--roboto);
     font-size: var(--h2);
