--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -172,7 +172,7 @@ hr {
 
 .block {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr .6fr 1fr;
 }
 
 .socialdiv {
@@ -182,7 +182,7 @@ hr {
 }
 
 .social {
-    width: 50px;
+    width:35px;
     height: auto;
 }
 
@@ -216,7 +216,7 @@ hr {
 /** population **/
 
 .links {
-    font-size: 1rem;
+    font-size: .9rem;
     color: black;
     padding: 0;
     border-radius: 0;
@@ -224,11 +224,11 @@ hr {
 }
 
 .member img{
-    width: 60%;
+    width: 170px;
     height: auto;
     border-radius: 6px;
-    box-shadow: 2px 2px 8px rgb(0, 0, 0);
-    margin: 10px;
+    box-shadow: 1px 1px 6px rgb(0, 0, 0);
+    margin: 5px;
     align-self: center;
 }
 
@@ -318,7 +318,7 @@ hr {
 }
 
 #logo {
-    width: 125px;
+    width: 100px;
     height: auto;
     border-radius: 6px;
     justify-self: center;
