--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -171,6 +171,8 @@ hr {
 }
 
 .block {
+    width: 80%;
+    justify-self: center;
     display: grid;
     grid-template-columns: 1fr .6fr 1fr;
 }
@@ -308,7 +310,7 @@ hr {
     background-color: var(--color1);
     margin: 0;
     display: grid;
-    grid-template: 0.5fr 0.5fr / 0.2fr 0.8fr;
+    grid-template: 0.5fr 0.5fr / 0.1fr 0.8fr;
     align-items: center;
     gap: 10px;
 }
@@ -318,7 +320,7 @@ hr {
 }
 
 #logo {
-    width: 100px;
+    width: 80px;
     height: auto;
     border-radius: 6px;
     justify-self: center;
