--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -359,10 +359,14 @@ hr {
 }
 
 #logo {
-    width: 80px;
+    width: 100%;
     height: auto;
     border-radius: 6px;
-    justify-self: center;
+    text-align: center;
+}
+
+#mobile {
+    width: 100%;
 }
 
 #hero {
@@ -410,7 +414,7 @@ hr {
         justify-content: start;
     }
 
-    .block {
+    .block, .events_weather {
         display: flex;
         flex-flow: column;
     }
