--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -121,6 +121,32 @@ hr {
     margin: 1rem;
 }
 
+form {
+    display: flex;
+    flex-flow: column;
+    gap: 15px;
+}
+
+label {
+    font-family: var(--roboto);
+    font-size: var(--h3);
+}
+
+input[type=text],
+input[type=tel],
+input[type=email],
+textarea {
+    border-radius: 6px;
+    background-color: #1fb26127;
+}
+
+input[type=text],
+input[type=tel],
+input[type=email] {
+    height: 25px;
+    padding-left: 5px;
+}
+
 /** blocks **/
 
 .hero {
@@ -337,6 +363,72 @@ hr {
     color: var(--color1);
 }
 
+.box1 {
+    display: flex;
+    flex-flow: column;
+}
+
+.box2 {
+    background-color: var(--color3);
+    text-align: center;
+    border-radius: 6px;
+    width: 80%;
+    margin: 0 auto;
+    padding: 10% 0 10% 0;
+}
+
+.submit-btn {
+    background-color: var(--color3);
+    color: black;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+    color: white;
+    background-color: var(--color2);
+    transition: background-color 0.5s ease;
+    transition-delay: 0s;
+}
+
+#levels {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.6s ease;
+} 
+
+#levels.animation {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+input[type=submit] {
+    font-family: var(--roboto);
+    font-size: var(--h3);
+}
+
+#submit {
+    text-align: center;
+}
+
+#levels {
+    display: flex;
+    flex-flow: column;
+    gap: 15px;
+}
+
+#info {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #1fb26127;
+    padding: 10px;
+    border-radius: 6px;
+}
+
 #yellow {
     color: var(--color3);
 }
@@ -387,6 +479,16 @@ hr {
     height: auto;
 }
 
+#joinus {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#joinus h2 {
+    text-align: center;
+}
+
+
 @media screen and (max-width: 500px) {
 
     .button {
@@ -431,6 +533,12 @@ hr {
         width: 100%;
         height: auto;
         grid-row: 1;
+    }
+
+    #joinus {
+        display: flex;
+        flex-flow: column;
+        gap: 15px;
     }
 
     /** menu **/
