--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -369,12 +369,15 @@ input[type=email] {
 }
 
 .box2 {
+    display: flex;
+    flex-flow: column;
     background-color: var(--color3);
     text-align: center;
     border-radius: 6px;
     width: 80%;
     margin: 0 auto;
     padding: 10% 0 10% 0;
+    gap: 10px;
 }
 
 .submit-btn {
@@ -388,11 +391,44 @@ input[type=email] {
     transition: background-color 0.3s ease;
 }
 
-.submit-btn:hover {
+.submit-btn:hover, .open-modal:hover {
     color: white;
     background-color: var(--color2);
     transition: background-color 0.5s ease;
     transition-delay: 0s;
+}
+
+.open-modal {
+    font-size: var(--h3);
+    width: 30%;
+    margin: 0 auto;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+background: white;
+padding: 24px;
+border-radius: 8px;
+width: 90%;
+max-width: 400px;
+position: relative;
+}
+
+.close {
+position: absolute;
+top: 10px; right: 14px;
+font-size: 24px;
+cursor: pointer;
 }
 
 #levels {
