--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -147,6 +147,11 @@ input[type=email] {
     padding-left: 5px;
 }
 
+input[type="radio"] {
+    width: 17px;
+    height: 17px;
+  }
+
 /** blocks **/
 
 .hero {
