--- a/final/styles/odessa.css
+++ b/final/styles/odessa.css
@@ -185,11 +185,17 @@ hr {
 .navigation3 a:hover,
 .navigation3 a:active,
 input[type="submit"]:hover,
-input[type="submit"]:active {
+input[type="submit"]:active,
+.read-more-button:hover,
+.read-more-button:active {
     color: var(--color1);
     background-color:rgb(255, 255, 255);
     transition: background-color 0.5s ease;
     transition-delay: 0s;
+}
+
+.read-more-button {
+    cursor: pointer;
 }
 
 .navigation2 {
@@ -252,6 +258,44 @@ input[type="submit"]:active {
     justify-self: center;
     padding-left: 3%;
     padding-right: 3%;
+}
+
+.modal-overlay {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1000; /* High z-index to be on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.6); /* Dark semi-transparent background */
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 500px;
+    position: relative;
+    text-align: center;
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: #000;
+    text-decoration: none;
 }
 
 #imgmenu {
