--- a/final/styles/odessa.css
+++ b/final/styles/odessa.css
@@ -298,6 +298,12 @@ input[type="submit"]:active,
     text-decoration: none;
 }
 
+#video {
+    background-color: none;
+    padding: 0;
+    font-size: 1rem;
+}
+
 #imgmenu {
     width: 100%;
     height: auto;
